--- a/index.html
+++ b/index.html
@@ -213,14 +213,12 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
-                <div class="row">
-                    <div class="col-lg-4 ms-auto">
+                <div class="nose">
+                    
                        
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.997457425151!2d-58.380845457946776!3d-34.60422580273741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1sen!2sar!4v1655992183403!5m2!1sen!2sar" width=100% height=100% style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.997457425151!2d-58.380845457946776!3d-34.60422580273741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1sen!2sar!4v1655992183403!5m2!1sen!2sar" width=100% height=300px style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-                    </div>
-                    <div class="col-lg-4 me-auto"><p class="lead">Podes llegar en: <br>1, 2, 5, 101, adipisicing elit. Deleniti, asperiores voluptatem! Cupiditate officia aliquid magni alias impedit nostrum, explicabo quas, et quidem, dolore velit omnis iste praesentium quibusdam voluptatibus iusto?</p></div>
-                </div>
+                    <p class="lead">Podes llegar en: <br>1, 2, 5,34,100 adipisicing elit. Deleniti, asperiores voluptatem! Cupiditate officia aliquid magni alias impedit nostrum, explicabo quas, et quidem, dolore velit omnis iste praesentium quibusdam voluptatibus iusto?</p></div>
                 <!-- About Section Button-->
             </div>
         </section>
