--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio"
-                >Inicio</a
+                >Lo que hacemos</a
               >
             </li>
             <li class="nav-item mx-0 mx-lg-1">
@@ -91,15 +91,18 @@
         <p class="masthead-subheading font-weight-light mb-0">
           Atendemos <b>URGENCIAS</b> 24/7 en C.A.B.A.
         </p>
-        <a href="https://wa.me/15551234567" class="pt-2">
+        <a
+          href="https://api.whatsapp.com/send?phone=15551234567&text=Hola!%20estoy%20con%20una%20urgencia"
+          class="pt-2"
+        >
           <img src="./assets/img/whatsapp-contactanos.png" width="250" />
         </a>
       </div>
     </header>
-    <!-- Portfolio Section-->
+    <!-- Trabajos Section-->
     <section class="page-section portfolio" id="portfolio">
       <div class="container">
-        <!-- Portfolio Section Heading-->
+        <!-- Trabajos Section Heading-->
         <h2
           class="page-section-heading text-center text-uppercase text-secondary mb-0"
         >
@@ -111,9 +114,9 @@
           <div class="divider-custom-icon"><i class="fas fa-bolt"></i></div>
           <div class="divider-custom-line"></div>
         </div>
-        <!-- Portfolio Grid Items-->
+        <!-- Trabajos Grid Items-->
         <div class="row justify-content-center">
-          <!-- Portfolio Item 1-->
+          <!-- Trabajos Item 1-->
           <div class="col-md-6 col-lg-4 mb-5">
             <div
               class="portfolio-item mx-auto"
@@ -259,7 +262,7 @@
       <div class="container">
         <!-- About Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-white">
-          Servicios
+          Acerca De Nosotros
         </h2>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
@@ -287,6 +290,21 @@
         </div>
       </div>
     </section>
+
+    <!-- Tenemos -->
+    <section class="van">
+      <div class="container d-flex align-items-center flex-column">
+        <h2 class="h1 text-uppercase mb-0 text-light">
+          Contamos con varios Móviles
+        </h2>
+        <p class="mb-0 text-light text-center" style="font-size: 1.5em">
+          Vehículos preparados y listos para concurrir en el tiempo más breve
+          posible a tu emergencia<br />
+          Vamos a consorcios empresas, locales, casas particulares
+        </p>
+      </div>
+    </section>
+
     <!-- Contact Section-->
     <section class="page-section" id="contact">
       <div class="container">
@@ -428,10 +446,8 @@
           ></iframe>
 
           <p class="lead">
-            Podes llegar en: <br />1, 2, 5,34,100 adipisicing elit. Deleniti,
-            asperiores voluptatem! Cupiditate officia aliquid magni alias
-            impedit nostrum, explicabo quas, et quidem, dolore velit omnis iste
-            praesentium quibusdam voluptatibus iusto?
+            Podes llegar en: <br />Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Delectus, quas.
           </p>
         </div>
         <!-- About Section Button-->
