--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
+              <p class="text-center h4">Reparacion y Venta</p>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/electrician.jpg"
+                src="assets/img/portfolio/repair.jpg"
                 alt="..."
               />
             </div>
@@ -155,9 +156,10 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
+              <p class="text-center h4">Electricidad</p>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/fix.jpg"
+                src="assets/img/portfolio/electric.jpg"
                 alt="..."
               />
             </div>
@@ -178,9 +180,10 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
+              <p class="text-center h4">Bombas de Agua</p>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/tools.jpg"
+                src="assets/img/portfolio/water.jpg"
                 alt="..."
               />
             </div>
@@ -201,9 +204,11 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
+              <p class="text-center h4">Camaras de seguridad</p>
+
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/electrician.jpg"
+                src="assets/img/portfolio/seguritycam.jpg"
                 alt="..."
               />
             </div>
@@ -224,9 +229,10 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
+              <p class="text-center h4">Reparacion de maquinaria</p>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/tools.jpg"
+                src="assets/img/portfolio/machine.jpg"
                 alt="..."
               />
             </div>
@@ -247,9 +253,10 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
+              <p class="text-center h4">Plomería</p>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/fix.jpg"
+                src="assets/img/portfolio/plomeria.jpg"
                 alt="..."
               />
             </div>
@@ -290,7 +297,6 @@
         </div>
       </div>
     </section>
-
     <!-- Tenemos -->
     <section class="van">
       <div class="container d-flex align-items-center flex-column">
@@ -300,11 +306,10 @@
         <p class="mb-0 text-light text-center" style="font-size: 1.5em">
           Vehículos preparados y listos para concurrir en el tiempo más breve
           posible a tu emergencia<br />
-          Vamos a consorcios empresas, locales, casas particulares
+          Vamos a consorcios, empresas, locales, particulares, casas, departamentos
         </p>
       </div>
     </section>
-
     <!-- Contact Section-->
     <section class="page-section" id="contact">
       <div class="container">
@@ -552,7 +557,7 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/electrician.jpg"
+                    src="assets/img/portfolio/repair.jpg"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
@@ -610,7 +615,7 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/fix.jpg"
+                    src="assets/img/portfolio/electric.jpg"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
@@ -669,7 +674,7 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/tools.jpg"
+                    src="assets/img/portfolio/water.jpg"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
@@ -727,7 +732,7 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/electrician.jpg"
+                    src="assets/img/portfolio/seguritycam.jpg"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
@@ -786,7 +791,7 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/tools.jpg"
+                    src="assets/img/portfolio/machine.jpg"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
@@ -844,7 +849,7 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/fix.jpg"
+                    src="assets/img/portfolio/plomeria.jpg"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
