--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       id="mainNav"
     >
       <div class="container">
-        <a class="navbar-brand" href="#page-top">MDElectroservicios</a>
+        <a class="navbar-brand" href="#page-top">MDElectro</a>
         <button
           class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded"
           type="button"
@@ -86,7 +86,7 @@
           alt="..."
         />
         <!-- Masthead Heading-->
-        <h1 class="masthead-heading text-uppercase mb-0">MDElectroservicios</h1>
+        <h1 class="masthead-heading text-uppercase mb-0">MD Electro servicios</h1>
         <!-- Masthead Subheading-->
         <p class="masthead-subheading font-weight-light mb-0">
           Atendemos <b>URGENCIAS</b> 24/7 en C.A.B.A.
